<resources>
    <string name="app_name">Arrow News</string>

    <string name="open_drawer">Opening Navigation Drawer</string>
    <string name="close_drawer">Closing Navigation Drawer</string>

    <string name="headline">Headline</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="finance">Finance</string>
    <string name="economy">Economy</string>
    <string name="politics">Politics</string>
    <string name="gaming">Gaming</string>
    <string name="music">Music</string>
    <string name="energy">Energy</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>

    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="share">Share</string>

    <string name="news_photo">News Photo</string>
    <string name="more_actions">more actions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>